[package]
name = "api_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio-postgres = "0.5.3"
tokio-test = "0.4.0"

[dev-dependencies]
tokio = {version="~0.2", features=["macros", "rt-core"]}
